Fixing Sidebar attribute table Y overflow

--- a/app/assets/stylesheets/light_admin/components/_sidebars.scss
+++ b/app/assets/stylesheets/light_admin/components/_sidebars.scss
@@ -6,6 +6,12 @@
   label {
     margin-bottom: 5px;
   }
+
+  .attributes_table {
+    th { 
+      min-width: 0 
+    }
+  }
 }
 
 /* FILTER STATUS LIST STYLE */
